<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/btn_otropais"
        android:layout_width="88dp"
        android:layout_height="90dp"
        android:background="@drawable/south_africa_flag_flags_18081"
        android:foreground="@drawable/south_africa_flag_flags_18081"
        android:text="consultar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/paises"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:text="@string/pregunta"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="258dp"
        android:layout_height="53dp"
        android:text="@string/enunciado"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <RadioGroup
        android:id="@+id/rdgp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toEndOf="@+id/paises"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004">

        <RadioButton
            android:id="@+id/respuesta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/respuesta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/respuesta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/respuesta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio4"
            android:textSize="18sp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="152dp"
        android:layout_height="170dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607"
        app:srcCompat="@drawable/kisspng_flag_of_south_africa_map_clip_art_pride_cliparts_5a774c3f1ce1c6_5188219515177677431183" />

    <TextView
        android:id="@+id/enunbot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enunciadobot"
        app:layout_constraintBottom_toTopOf="@+id/btn_otropais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paises"
        app:layout_constraintVertical_bias="0.765" />

</androidx.constraintlayout.widget.ConstraintLayout>